.compile_errors_snapshot.txt
error[E0308]: mismatched types
     --> src/families/bernoulli_marginal_slope.rs:17164:13
      |
      |             ^^^^^ expected `Arc<...>`, found `BernoulliMarginalSlopeExactEvalCache`
      |
help: call `Into::into` on this expression to convert `BernoulliMarginalSlopeExactEvalCache` into `std::sync::Arc<BernoulliMarginalSlopeExactEvalCache>`
      |
      |             ++++++      +++++++
error[E0308]: mismatched types
     --> src/families/custom_family.rs:19440:38
      |
      |                                      ^^^ expected `Option<f64>`, found floating-point number
      |
help: try wrapping the expression in `Some`
      |
      |                                      +++++   +
error[E0609]: no field `policy` on type `F`
     --> src/families/gamlss.rs:14452:30
      |
      |      - type parameter 'F' declared here
      |                              ^^^^^^ unknown field
error[E0599]: no method named `exact_newton_joint_psisecond_order_terms_from_parts` found for type parameter `F` in the current scope
     --> src/families/gamlss.rs:14475:18
      |
      |        - method `exact_newton_joint_psisecond_order_terms_from_parts` not found for this type parameter
      | |_________________-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |
help: there is a method `ws_psi_second_order_terms_from_parts` with a similar name
      |
      |
error[E0599]: no method named `exact_newton_joint_psihessian_directional_derivative_from_parts` found for type parameter `F` in the current scope
     --> src/families/gamlss.rs:14497:22
      |
      |        - method `exact_newton_joint_psihessian_directional_derivative_from_parts` not found for this type parameter
      | |_____________________-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |
help: there is a method `ws_psi_hessian_directional_from_parts` with a similar name
      |
      |
error[E0599]: no method named `apply_outer_subsample` found for struct `BinomialLocationScaleHessianWorkspace` in the current scope
     --> src/families/gamlss.rs:17028:23
      |
      |                       ^^^^^^^^^^^^^^^^^^^^^ method not found in `BinomialLocationScaleHessianWorkspace`
      | -------------------------------------------- method `apply_outer_subsample` not found for this struct
error[E0425]: cannot find function `location_scale_hazard_component` in this scope
    --> src/families/survival_predict.rs:1853:27
     |
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
error[E0593]: closure is expected to take 5 arguments, but it takes 4 arguments
     --> src/families/transformation_normal.rs:15274:18
      |
      |  __________________^
      | |         ---------------------------------------------------------------------------------- takes 4 arguments
      | |_____^ expected closure that takes 5 arguments
error[E0308]: mismatched types
     --> src/families/transformation_normal.rs:15358:17
      |
      |                        ---------------------------------- arguments to this function are incorrect
      |                 ^^^^^^^ expected `&BlockwiseFitOptions`, found `BlockwiseFitOptions`
      |
note: function defined here
     --> src/families/custom_family.rs:17537:8
      |
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |     -----------------------------
help: consider borrowing here
      |
      |                 +
error[E0308]: mismatched types
     --> src/families/transformation_normal.rs:15398:17
      |
      |                        -------------------------------------- arguments to this function are incorrect
      |                 ^^^^^^^ expected `&BlockwiseFitOptions`, found `BlockwiseFitOptions`
      |
note: function defined here
     --> src/families/custom_family.rs:18050:8
      |
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |     -----------------------------
help: consider borrowing here
      |
      |                 +
error[E0277]: `&std::sync::Arc<[ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 2]>, f64>]>` is not an iterator
    --> src/solver/arrow_schur.rs:1351:18
     |
     |                  ^^^^^^^^^^^^^^^^^ `&std::sync::Arc<[ArrayBase<OwnedRepr<f64>, ndarray::Dim<[usize; 2]>, f64>]>` is not an iterator
     |
error[E0282]: type annotations needed
    --> src/solver/arrow_schur.rs:1352:25
     |
     |                         ^ cannot infer type
error[E0277]: the trait bound `ArrayBase<OwnedRepr<f64>, Dim<[usize; 1]>, f64>: AsRef<...>` is not satisfied
    --> src/solver/pirls.rs:1844:46
     |
     |                                              ^^^^^^ unsatisfied trait bound
     |
help: the following other types implement trait `AsRef<T>`
    --> /Users/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ndarray-0.17.2/src/impl_ref_types.rs:143:1
     |
     | |__________________________^ `ArrayBase<S, D, A>` implements `AsRef<RawRef<A, D>>`
     | |__________________________^ `ArrayBase<S, D, A>` implements `AsRef<LayoutRef<A, D>>`
error[E0425]: cannot find function `build_periodic_fourier_margin` in this scope
    --> src/terms/smooth.rs:4684:43
     |
     |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
error[E0282]: type annotations needed
    --> src/terms/smooth.rs:4692:36
     |
     |                                    ^^^^^ cannot infer type
error[E0425]: cannot find function `tensor_product_design_from_sparse_marginals` in this scope
    --> src/terms/smooth.rs:4849:29
     |
     |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `tensor_product_design_from_marginals`
     | |_- similarly named function `tensor_product_design_from_marginals` defined here
error[E0308]: mismatched types
     --> src/terms/smooth.rs:9065:29
      |
      |                         --------------------------------------------------------------------- arguments to this function are incorrect
      |                             ^^^^^^ expected `f64`, found `usize`
      |
note: function defined here
     --> src/terms/basis.rs:13488:8
      |
      |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      |     ----------
help: you can cast a `usize` to an `f64`, producing the floating point representation of the integer, rounded if necessary
      |
      |                             +      ++++++++
error[E0308]: mismatched types
     --> src/terms/smooth.rs:13789:13
      |
      |              ------------------------------------------------------------ arguments to this function are incorrect
      |             ^^^^^^ expected `f64`, found `usize`
      |
note: associated function defined here
     --> src/terms/basis.rs:4484:19
      |
      |                   ^^^^^^^^^^
      |         ----------
help: you can cast a `usize` to an `f64`, producing the floating point representation of the integer, rounded if necessary
      |
      |             +      ++++++++
error[E0515]: cannot return value referencing function parameter `target`
    --> src/terms/analytic_penalties.rs:3678:9
     |
     |                     ------ `target` is borrowed here
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ returns a value referencing data owned by the current function
error: unreachable pattern
   --> src/terms/smooth.rs:766:17
    |
    |                 ------------------------------------ matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
    |
error: unreachable pattern
   --> src/terms/smooth.rs:776:17
    |
    |                 ----------------------------------------- matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
error: unreachable pattern
   --> src/terms/smooth.rs:813:17
    |
    |                 -------------------------------------- matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
error: unreachable pattern
   --> src/terms/smooth.rs:830:17
    |
    |                 --------------------------------------------- matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
error: unreachable pattern
   --> src/terms/smooth.rs:850:17
    |
    |                 --------------------------------------------- matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
error: unreachable pattern
   --> src/terms/smooth.rs:872:17
    |
    |                 -------------------------------------- matches all the relevant values
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
error: unused variable: `group_i`
    --> src/terms/term_builder.rs:1049:17
     |
     |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_group_i`
     |
note: the lint level is defined here
    --> src/lib.rs:44:9
     |
     |         ^^^^^^^^^^^^^^^^
error: unused variable: `periodic`
    --> src/terms/term_builder.rs:1711:17
     |
     |                 ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_periodic`
error: could not compile `gam` (lib) due to 27 previous errors
